# HRMS

./: .env  Cargo.toml
docs/: index.html  openapi.json
src/: config.rs  db.rs  docs.rs  main.rs  models.rs  routes.rs
src/api/: attendance.rs  employee.rs  leave_request.rs  mod.rs  payroll.rs
src/auth/: auth.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  password.rs
src/model/: attendance.rs  department.rs  employee.rs  job_title.rs  leave_request.rs  mod.rs  payroll.rs  role.rs  user.rs
src/utils/: db_utils.rs  mod.rs  username_cache.rs  username_filter.rs
