[package]
name = "hrm"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "^4"
moka = { version = "0.12", features = ["future"] }
#scalable_cuckoo_filter = "0.5.1"
autoscale_cuckoo_filter = "0.5.21" # it is lock-free and is much faster than scalable_cuckoo_filter
actix-governor = "0.6" # or latest version
once_cell = "1.19"
anyhow = "1.0"
futures = "0.3"
serde_json = "1"
dotenvy = "0.15"
uuid = { version = "^0.8", features = ["v4"] }
serde = { version = "^1", features = ["derive"] }
env_logger = "0.8"
log = "^0.4"
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"] }
derive_more = "^0.99"
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
# postgres not to be used for now, instead mysql be used
#sqlx = { version="0.8.6", features = [ "postgres", "runtime-tokio", "tls-native-tls" ] }
sqlx = { version = "0.7", features = [ "mysql", "runtime-tokio", "chrono", "macros" ] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
